--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derive_more = "0.99.14"
+derive_more = "0.99"
+image = { version = "0.23", default-features = false, features = ["png"] }
 
 [profile.dev.package."*"]
 opt-level = 3
