--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 image = { version = "0.23", default-features = false, features = ["png"] }
 glam = "0.17"
 rand = { version = "0.8", features = ["small_rng"] }
+rayon = "1.5.1"
+crossbeam = "0.8.1"
 
 [profile.dev.package."*"]
 opt-level = 3
