--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ glam = "0.17"
 rand = { version = "0.8", features = ["small_rng"] }
 rayon = "1.5.1"
 crossbeam = "0.8.1"
+clap = "2.33"
 
 [profile.dev.package."*"]
 opt-level = 3
