initial gpu support setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rayon = "1.5.1"
 crossbeam = "0.8.1"
 clap = "2.33"
 num_cpus = "1.13.0"
+maligog = { path = "../maligog" }
 
 [profile.dev.package."*"]
 opt-level = 3
