--- a/ray-tracing/Cargo.toml
+++ b/ray-tracing/Cargo.toml
@@ -15,14 +15,12 @@ clap = "2.33"
 num_cpus = "1.13.0"
 maligog = { path = "../../maligog" }
 
-[profile.dev.package."*"]
-opt-level = 3
+[dependencies.spirv-builder]
+git = "https://github.com/EmbarkStudios/rust-gpu"
+rev = "f224b5aa1a5e73d0128d23d4bb75b8c23911f180"
+features = ["use-installed-tools", "watch"]
+default-features = false
 
-[profile.dev]
-opt-level = 2
-
-[profile.release]
-lto = false
 
 [features]
 default = ["f64"]
