--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
-[workspace]
-members = [
-    "ray-tracing",
-    "shaders/*",
-    "the-rest"
-]
+[package]
+name = "ray-tracing"
+version = "0.1.0"
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
+glam = "0.17"
+rand = { version = "0.8", features = ["small_rng"] }
+rayon = "1.5.1"
+crossbeam = "0.8.1"
+clap = "2.33"
+num_cpus = "1.13.0"
 
 [profile.dev.package."*"]
 opt-level = 3
@@ -13,3 +22,9 @@ opt-level = 2
 
 [profile.release]
 lto = false
+
+[features]
+default = ["f64"]
+f32 = []
+f64 = []
+f32-simd = []
