--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Check format
         run: cargo fmt --check --all
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features
+        run: cargo clippy -- -D warnings
       - name: Build
         run: cargo build --verbose
       - name: Run tests
