--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ rayon = "1.5.3"
 crossbeam = "0.8.2"
 clap = "3.2"
 num_cpus = "1.13.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [profile.dev.package."*"]
 opt-level = 3
